--- a/VIMAT/vimat.css
+++ b/VIMAT/vimat.css
@@ -17,7 +17,10 @@ button {
 }
 
 input {
-    height: 9px;
+    /*height: 9px;*/
+    /*border-style: inset;*/
+    max-height: 7px;
+    max-width: 88%;
     font-size: 7px;
     color: #46220A;
     border-radius: 10px;
